# pyrs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
python/pyrs/: __init__.py  main.py
rust/: lib.rs
tests/: test_pyrs.py
