# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrs"
version = "0.0.0"

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python"] }

[project.scripts]
pyrs = "pyrs.main:cli" 

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "pyrs._lib"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml